# uefi-toys

./: .gitignore  Cargo.toml  README.md
loopdrv/: Cargo.toml  build.rs
loopdrv/src/: lib.rs  macros.rs  main.rs
loopdrv/src/driver/: binding.rs  comp_name.rs  dev_path.rs  loop_ctl.rs  mod.rs
loopdrv/src/driver/loopback/: block_io.rs  loop_pt.rs  mod.rs
lopatch/: Cargo.toml
lopatch/src/: main.rs  utils.rs
lopatch/src/command/: attach.rs  detach.rs  list.rs  mod.rs
reset/: Cargo.toml
reset/src/: main.rs
shell-split/: Cargo.toml
shell-split/src/: lib.rs
